# conmon

./: .cirrus.yml  .clang-format  .dir-locals.el  .gitignore  .packit.yaml  .papr.yml  05-slproxy.json  CODE-OF-CONDUCT.md  Containerfile  Makefile  README.md  SECURITY.md  VERSION  changelog.txt  go.mod  go.sum  install.md  meson.build  slproxy-hook  test_libpod.sh
.github/: renovate.json5
.github/workflows/: codeql.yml  coverage.yml  integration.yml  static.yml  validate.yml
.rpmbuild/: Makefile  prepare.sh
cmd/conmon-config/: conmon-config.go
contrib/cirrus/: Containerfile  README.md  build_vm_images.sh  config.sh  cri-o_test.sh  fedora_packaging.sh  fmt.sh  integration_test.sh  lib.sh  network_bats.patch  setup_environment.sh  setup_unit_tests.sh  spoof_travis.patch  static_binary.sh  vendor.sh
contrib/cirrus/packer/: .gitignore  Makefile  conmon_base_images.yml  conmon_images.yml  fedora_base-setup.sh  fedora_setup.sh  image-builder-image_base-setup.sh  rhel_base-setup.sh  rhel_setup.sh
contrib/spec/: conmon.spec.in
docs/: Makefile  conmon.8.md
hack/: get_ci_vm.sh  github-actions-setup  kubernetes-e2e  seccomp-notify.sh  tree_status.sh
hack/tmt/: bats-setup.sh  dnf-repo-setup.sh
nix/: default-arm64.nix  default-ppc64le.nix  default-riscv64.nix  default.nix  derivation.nix  nixpkgs.json  overlay.nix
plans/: podman.fmf
rpm/: conmon.spec
runner/config/: config_unix.go  config_windows.go
runner/conmon/: conmon.go  options.go  pipes.go
runner/conmon_test/: conmon_test.go  ctr_logs_test.go  k8s_log_rotation_test.go  runtime_test.go  suite_test.go
src/: cgroup.c  cgroup.h  cli.c  cli.h  close_fds.c  close_fds.h  cmsg.c  cmsg.h  config.h  conmon.c  conn_sock.c  conn_sock.h  ctr_exit.c  ctr_exit.h  ctr_logging.c  ctr_logging.h  ctr_logging_buffer.c  ctr_logging_buffer.h  ctr_stdio.c  ctr_stdio.h  ctrl.c  ctrl.h  globals.c  globals.h  healthcheck.c  healthcheck.h  log_rate.c  log_rate.h  oom.c  oom.h  parent_pipe_fd.c  parent_pipe_fd.h  runtime_args.c  runtime_args.h  seccomp_notify.c  seccomp_notify.h  seccomp_notify_plugin.h  self_pipe.c  self_pipe.h  utils.c  (+1 more)
test/: 01-basic.bats  02-ctr-logs.bats  03-k8s-log-rotation.bats  04-runtime.bats  05-oom-detection.bats  06-exec-exit-status.bats  06-log-management.bats  06-priority-parsing.bats  07-attach.bats  07-multibyte-log-tag.bats  07-timer-command.bats  08-exec.bats  09-partial-log-test.bats  10-async-logging.bats  10-ctrl.bats  10-healthcheck-cli-parsing.bats  10-healthcheck-integration.bats  10-healthcheck.bats  11-async-logging-edge-cases.bats  Makefile  run-tests.sh  test_helper.bash
tools/: Makefile  go.mod  go.sum  tools.go
